Create reply controller and routes
